@@ -1298,7 +1298,9 @@ class Base:
         while Gtk.events_pending():
             Gtk.main_iteration()
         if f:
-            if misc.is_binary(f):
+            try:
+                f = f.decode()
+            except UnicodeDecodeError:
                 # Binary file, just add it:
                 self.mpd.add(item)
             else:
