@@ -30,6 +30,9 @@ Bug fixes
     * Fix saving the visibility flag of tabs: https://github.com/multani/sonata/issues/45
     * Fix hiding/showing the main window even if it's not the active widget:
       https://github.com/multani/sonata/issues/43
+    * Fix streams parsing:
+      https://github.com/multani/sonata/issues/41
+      https://github.com/multani/sonata/issues/38
 
 Internal changes
 ''''''''''''''''
